--- a/Parse-Starter-Project-1-2/ParseStarterProject/src/main/res/values/strings.xml
+++ b/Parse-Starter-Project-1-2/ParseStarterProject/src/main/res/values/strings.xml
@@ -28,5 +28,6 @@
     <string name="progress_signup"></string>
     <string name="userName">username</string>
     <string name="title_activity_auto_sign_in">AutoSignInActivity</string>
+    <string name="title_activity_decision">DecisionActivity</string>
 
 </resources>
